--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.syauqi.myapplication">
+
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,9 +19,18 @@
             </intent-filter>
         </activity>
         <activity android:name=".WelcomeActivity" />
-        <activity android:name=".RegisterActivity"></activity>
-        
+        <activity android:name=".RegisterActivity" />
+
         <service android:name=".ServiceMe" />
+        <service android:name=".IntentServiceMe" />
+
+        <receiver android:name=".NotificationReceiver">
+            <intent-filter>
+                <action android:name="NOTIFICATION_REGISTER" />
+                <action android:name="MANTAP_JIWA" />
+                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
